# ditto-edge-studio

./: .env-sample  .gitignore  .mcp.json  .periphery.yml  .swiftformat  .swiftlint.yml  ADD_FILES_TO_XCODE.md  AGENTS.md  BRAND_COLORS_PLAN.md  CLAUDE.md  CONSTRAINT_LOOP_FIX_VERIFICATION.md  DOTNET.md  EXECUTION_STATUS.md  LICENSE  Makefile  PHASE_1_REFACTORING_COMPLETE.md  PHASE_2_SCENE_ARCHITECTURE_COMPLETE.md  PHASE_8_TEST_MODE_COMPLETE.md  PLAN_OBSERVE_DETAIL_REFACTOR.md  PLAN_UPDATE_SUMMARY.md  PRESENCE_VIEWER_SESSION_STATE.md  PRESENCE_VIEWER_SPRITEKIT_PLAN.md  PRESENCE_VIEWER_STATUS.md  README.md  ReleaseNotes.md  SECURECACHE_REMOVAL_PLAN.md  SPRITE_UPDATE_PLAN_V2.md  TEST_ISOLATION_RESEARCH.md  TEST_MIGRATION_LOG.md  connection-status-presence-plan.md  ditto-server-counter-plan.md  dittoConfig.plist  generate_icons.swift  sync-observer-lifecycle-plan.md  sync-status-presence-filter-plan.md
SwiftUI/: .gitignore  (+26 more)
rust/: .env.sample  CLAUDE.md  Cargo.toml  Info.plist  README.md  entitlements.plist  package-lock.json  package.json
rust/src/: App.css  App.tsx  app.rs  ditto_manager.rs  index.css  lib.rs  main.tsx
rust/src-tauri/: Cargo.toml  tauri.conf.json
rust/src-tauri/src/: ditto_app_config.rs  ditto_config.rs  ditto_provider.rs  lib.rs  logging.rs  main.rs
rust/src/components/: AddAppConfigModal.tsx  AppCard.tsx  AppListing.tsx  ErrorModal.tsx  LogsWindow.tsx
rust/src/hooks/: useAppConfig.ts
rust/src/models/: DittoAppConfig.ts  ditto_app_config.rs  ditto_subscription.rs
rust/src/providers/: DittoProvider.tsx
rust/src/services/: dittoService.ts
(+1388 files in other folders)
