[package]
name = "edge-studio"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "edge-studio"
path = "src/bin/main.rs"

[lib]
name = "edge_studio"
path = "src/lib.rs"

[dependencies]
# Ditto dependenceis
dittolive-ditto = "4.10.0"
# External dependencies
anyhow = "1"
async-shutdown = "0.2"
clap = { version = "4.5.20", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-concurrency = "7.6"
hashbrown = "0.15.2"
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43", features = ["full", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = "1.13"
owo-colors = "4.2.2"
inquire = "0.7.5"
